tests/dataset/tpc-h/compiler/kt/q15.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q15.kt:104:17: error: operator '==' cannot be applied to 'Int' and 'Double'
            if (s.s_suppkey == toDouble((r as MutableMap<String, Any?>)["supplier_no"])) {
                ^
